# apitest

./: Cargo.toml  Rocket.toml  rustc-ice-2024-01-10T15_43_14-63607.txt  rustc-ice-2024-01-10T15_43_14-63608.txt  rustc-ice-2024-01-10T15_43_18-63730.txt  rustc-ice-2024-01-10T15_43_18-63731.txt  rustc-ice-2024-01-10T15_43_30-63798.txt  rustc-ice-2024-01-10T15_43_30-63799.txt  rustc-ice-2024-01-10T16_03_23-68089.txt  rustc-ice-2024-01-10T16_03_23-68090.txt  rustc-ice-2024-01-10T16_03_29-68139.txt  rustc-ice-2024-01-10T16_03_29-68140.txt  rustc-ice-2024-02-22T21_07_11-16127.txt  rustc-ice-2024-02-22T21_07_11-16128.txt  rustc-ice-2024-02-22T21_09_33-16925.txt  rustc-ice-2024-02-22T21_10_20-17211.txt  rustc-ice-2024-02-22T21_10_20-17212.txt  rustc-ice-2024-02-22T21_10_22-17264.txt  rustc-ice-2024-02-22T21_10_22-17265.txt  rustc-ice-2024-02-22T21_10_27-17382.txt  rustc-ice-2024-02-22T21_10_27-17383.txt  rustc-ice-2024-02-22T21_10_44-17621.txt  rustc-ice-2024-02-22T21_10_44-17622.txt  rustc-ice-2024-02-22T21_10_47-17658.txt  rustc-ice-2024-02-22T21_10_47-17659.txt  rustc-ice-2024-02-22T21_10_52-17783.txt  rustc-ice-2024-02-22T21_10_52-17784.txt  rustc-ice-2024-02-22T21_10_58-17830.txt  rustc-ice-2024-02-22T21_10_58-17831.txt  rustc-ice-2024-02-22T21_11_05-17933.txt  rustc-ice-2024-02-22T21_11_43-18105.txt  rustc-ice-2024-02-22T21_11_43-18106.txt  rustc-ice-2024-02-22T21_11_53-18231.txt  rustc-ice-2024-02-22T21_13_33-18749.txt  rustc-ice-2024-02-22T21_13_33-18750.txt  rustc-ice-2024-02-22T21_13_42-18857.txt  rustc-ice-2024-02-22T21_13_42-18858.txt  (+10 more)
src/: lib.rs  main.rs  model.rs  (+2 more)
(+27 files in other folders)
