[package]
name = "apitest"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
postgres = { version = "0.19.7" }
diesel = { version = "2.1.0", features = ["postgres", "nightly-error-messages", "chrono"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
serde = "1.0.195"
tera = "1"
chrono = { version = "0.4.33", features = ["serde"] }
